<resources>
    <string name="app_name">2018IOTAPP3</string>
    <string name="ip_tip">请输入IP地址,如http:/192.168.1.1</string>
    <string name="project_tip">请输入项目标识</string>
    <string name="username_tip">请输入用户名</string>
    <string name="username">用户名</string>
    <string name="pwd_tip">请输入项目标识</string>
    <string name="login"> 登录</string>
    <string name="pwd">密码</string>
    <string name="ok">确定</string>
    <string name="moni">模拟</string>
    <string name="savedata">保存登录信息</string>
    <string name="program_sign">项目标识</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
